# ruz-site

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose-coolify.yaml  docker-compose.yaml  pyproject.toml
src/ruzsite/: __init__.py  __main__.py  app.py  dependencies.py  logging_config.py  main.py  settings.py
src/ruzsite/clients/: __init__.py  backend_client.py
src/ruzsite/routes/: auth.py  groups.py  health.py  homepage.py  schedule.py  settings.py
src/ruzsite/schemas/: auth.py  group.py  homepage.py  rate_limit.py  schedule.py  settings.py  user.py
src/ruzsite/services/: auth_service.py  group_service.py  homepage_service.py  rate_limit_service.py  redis_service.py  schedule_service.py  settings_service.py  user_service.py
src/ruzsite/static/css/: app.css  compact.css
src/ruzsite/static/js/: app.js  telegram-auth.js
src/ruzsite/templates/: base.html  homepage.html  login.html  schedule.html  settings.html
tests/: test_health.py  test_rate_limit_and_cache.py  test_schedule_service.py  test_settings.py  test_telegram_auth.py
